# belen-creator

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  installer.iss  resources.qrc
.github/workflows/: build.yml
scripts/: generate_macos_icns.py  ninja_preclean.bat  prepare_installer.bat
src/: CanvasView.cpp  CanvasView.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: AuthService.cpp  AuthService.h  HistorialService.cpp  HistorialService.h  PiezaCardData.h  PiezaService.cpp  PiezaService.h  PropietarioService.cpp  PropietarioService.h  PuertoService.cpp  PuertoService.h  SupabaseClient.cpp  SupabaseClient.h  TimelineService.cpp  TimelineService.h  TipoService.cpp  TipoService.h  UbicacionService.cpp  UbicacionService.h  UsadaService.cpp  UsadaService.h
src/models/: Dispositivo.h  Galeria.h  Pieza.h  Propietario.h  Puerto.h  Timeline.h  Tipo.h  Ubicacion.h  Usada.h  UsadaCanvasPlacement.h  Usuario.h
src/ui/: DashboardWidget.cpp  DashboardWidget.h  LoadingOverlay.cpp  LoadingOverlay.h  LoginWidget.cpp  LoginWidget.h  RegisterWidget.cpp  RegisterWidget.h  TimelineTopBoardView.cpp  TimelineTopBoardView.h
src/ui/pages/: DispositivosPage.cpp  DispositivosPage.h  HistorialPage.cpp  HistorialPage.h  PiezasPage.cpp  PiezasPage.h  PropietariosPage.cpp  PropietariosPage.h  PuertosPage.cpp  PuertosPage.h  TimelinesPage.cpp  TimelinesPage.h  TiposPage.cpp  TiposPage.h  UbicacionesPage.cpp  UbicacionesPage.h
storage/ddbb/docs/: Diagrama1.dia
storage/ddbb/rls/: rls_policies.sql
storage/ddbb/rls/parts/: part1_usuario_tipo_puerto.sql  part2_tables_user_id.sql  part3_pieza_tipo.sql  part4_galeria.sql  part5_usada.sql
storage/ddbb/schema/: migration.sql
storage/ddbb/seed/: seed.sql
